Data Representation by Bar Graph

--- a/BAR_graph.ipynb
+++ b/BAR_graph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPrxuR6fEJDjsvG5hNlACA",
+      "authorship_tag": "ABX9TyOLb/V16Yhxn0/EShXttt5M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -963,9 +963,7 @@
       "cell_type": "code",
       "source": [
         "# create data\n",
-        "df = pd.DataFrame([['A', 10, 20, 10, 26], ['B', 20, 25, 15, 21], ['C', 12, 15, 19, 6],\n",
-        "\t\t\t\t['D', 10, 18, 11, 19]],\n",
-        "\t\t\t\tcolumns=['Team', 'Round 1', 'Round 2', 'Round 3', 'Round 4'])\n",
+        "df = pd.DataFrame([['A', 10, 20, 10, 26], ['B', 20, 25, 15, 21], ['C', 12, 15, 19, 6],['D', 10, 18, 11, 19]],columns=['Team', 'Round 1', 'Round 2', 'Round 3', 'Round 4'])\n",
         "# view data\n",
         "print(df)\n",
         "\n",
