Working with PANDAS Library

--- a/PANDAS_Library.ipynb
+++ b/PANDAS_Library.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1C6kntlNLyL2_m9JgvGsKaR0XTO7XbYkh",
-      "authorship_tag": "ABX9TyP2/IKUtKTO7QW2XqMUxNSa",
+      "authorship_tag": "ABX9TyNpyTGZbZGwMPowz6dOzkVH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2832,11 +2832,12 @@
         "df = pd.DataFrame(employees,columns =['Name', 'Age','City', 'Salary'])\n",
         "\n",
         "ls=set(df[\"Name\"])\n",
-        "\n",
+        "ls1=list(ls)\n",
         "print(ls)\n",
+        "print(ls1)\n",
         "data=df.set_index('Name',inplace=True)\n",
         "\n",
-        "result=df.loc[ls]\n",
+        "result=df.loc[ls1]\n",
         "print(result)"
       ],
       "metadata": {
@@ -2844,19 +2845,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wtG-K75epn5P",
-        "outputId": "54e781f6-2973-4588-88b6-9ea8f761d9d0"
+        "outputId": "637a5cba-a790-4b46-831b-ec51fd22ebef"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'Seema', 'Stuti', 'Saumya', 'Aaditya'}\n",
+            "{'Stuti', 'Seema', 'Saumya', 'Aaditya'}\n",
+            "['Stuti', 'Seema', 'Saumya', 'Aaditya']\n",
             "         Age      City  Salary\n",
             "Name                          \n",
-            "Seema     32     Delhi   70000\n",
             "Stuti     28  Varanasi   20000\n",
+            "Seema     32     Delhi   70000\n",
             "Saumya    32     Delhi   25000\n",
             "Saumya    32     Delhi   35000\n",
             "Saumya    32     Delhi   30000\n",
@@ -2864,21 +2866,22 @@
             "Aaditya   25    Mumbai   40000\n",
             "Aaditya   40  Dehradun   24000\n"
           ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-15-7274030c42a4>:14: FutureWarning: Passing a set as an indexer is deprecated and will raise in a future version. Use a list instead.\n",
-            "  result=df.loc[ls]\n"
-          ]
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        " Here we make 'ls' as set to reduce the redundancy means to remove the duplicate values from the name column because ahead we pass the 'ls' to the 'loc[ ]' function as we know the working of 'loc[ ]' function this select and display all the rows or data where the index is match, if we pass whole column without convert it into set than the redudancy seen if we make the set of all the passing values before passing than redundancy is not seen."
+        " Here we make 'ls' as set to reduce the redundancy means to remove the duplicate values from the name column because ahead we pass the 'ls' to the 'loc[ ]' function as we know the working of 'loc[ ]' function this select and display all the rows or data where the index is match, if we pass whole column without convert it into set than the redudancy seen if we make the set of all the passing values before passing than redundancy is not seen.\n",
+        "\n",
+        " **Warning**\n",
+        "\n",
+        " <ipython-input-17-821c7b311991>:14: FutureWarning: Passing a set as an indexer is deprecated and will raise in a future version. Use a list instead.\n",
+        "  result=df.loc[ls]\n",
+        "\n",
+        "  **Correction**\n",
+        "\n",
+        "  we convert the type of 'ls' into list and then pass to 'loc[ ]' function."
       ],
       "metadata": {
         "id": "4wykoW9g4JFD"
