Assignment of PANDAS Library

--- a/PANDAS_Exercise.ipynb
+++ b/PANDAS_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPt3KnCxU+Pmujtz4M34WhZ",
+      "authorship_tag": "ABX9TyOgziPqhxsulzlZMeqNChFB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -187,6 +187,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Method 1**"
+      ],
+      "metadata": {
+        "id": "5kqkE1ziswSv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -203,6 +212,46 @@
         "outputId": "60d94712-cd72-4ab1-cb04-fc5119205b1d"
       },
       "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Print first three rows od data..\n",
+            "        name  score  attempts qualify\n",
+            "a  Anastasia   12.5         1     yes\n",
+            "b       Dima    9.0         3      no\n",
+            "c  Katherine   16.5         2     yes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Method 2**"
+      ],
+      "metadata": {
+        "id": "NZ4OM72rstsl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "exam_data = {'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', 'Laura', 'Kevin', 'Jonas'], 'score': [12.5, 9, 16.5, 54, 9, 20, 14.5, 65, 8, 19], 'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1], 'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']}\n",
+        "df = pd.DataFrame(exam_data, index=['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j'])\n",
+        "print(\"Print first three rows od data..\")\n",
+        "print(df.iloc[0:3])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PEpsFSUMsbFm",
+        "outputId": "a0f7aa05-dbeb-4098-8898-df1c70161662"
+      },
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
