Working with PANDAS Library

--- a/PANDAS_Library.ipynb
+++ b/PANDAS_Library.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1C6kntlNLyL2_m9JgvGsKaR0XTO7XbYkh",
-      "authorship_tag": "ABX9TyNpyTGZbZGwMPowz6dOzkVH",
+      "authorship_tag": "ABX9TyPCPuZn71KEVTD/FxDyNZ4/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2847,7 +2847,7 @@
         "id": "wtG-K75epn5P",
         "outputId": "637a5cba-a790-4b46-831b-ec51fd22ebef"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3296,6 +3296,27 @@
       ],
       "metadata": {
         "id": "KqdFgN_I-gFf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Hey! My name is Oshank Agrawal.**\n",
+        "\n",
+        "In this module we learnt about the **Pandas library** and different functions like:\n",
+        "\n",
+        "* read_excel()\n",
+        "\n",
+        "* DataFrame()\n",
+        "\n",
+        "* read_csv()\n",
+        "\n",
+        "* different way to pass attribute to get desired output from a dataframe\n",
+        "\n",
+        "* df.shape etc."
+      ],
+      "metadata": {
+        "id": "65RuImTy47VA"
       }
     }
   ]
