Working with NUMPY Library

--- a/NUMPY_Library.ipynb
+++ b/NUMPY_Library.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOyjOLH+x7Ceg+gdnkSg0Wj",
+      "authorship_tag": "ABX9TyM6z5Qm7ZRnsSuUVVt4vU84",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1321,6 +1321,29 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Hey! My name is Oshank Agrawal.**\n",
+        "\n",
+        "In this module we learnt about **NUMPY Library** and its different functions like:\n",
+        "\n",
+        "* array()\n",
+        "\n",
+        "* type()\n",
+        "\n",
+        "**Attribute**\n",
+        "\n",
+        "* ndim\n",
+        "\n",
+        "* shape\n",
+        "\n",
+        "* size"
+      ],
+      "metadata": {
+        "id": "iazmThb_rxDB"
+      }
     }
   ]
 }
