--- a/NUMPY_Exercise.ipynb
+++ b/NUMPY_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzBgTRWfI2R+nl8uQuGEVk",
+      "authorship_tag": "ABX9TyOCT+gDpQioeKpA7MMCAybH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +104,7 @@
         "id": "0yR91sMNknCs",
         "outputId": "f70d6a9f-4607-4832-b1c1-df378936efc3"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +146,7 @@
         "id": "jbQOTRLnyC-4",
         "outputId": "434d414a-af90-44ea-8bcb-73649fc8363a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +197,7 @@
         "id": "upmxC4mhq8DX",
         "outputId": "e2bfab80-75fb-46c6-fb12-a3a98e911054"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +255,7 @@
         "id": "H7t86Ok4wFor",
         "outputId": "9208789d-c93a-476e-ecd8-78e0867cbc59"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +327,7 @@
         },
         "outputId": "4fa84d18-6567-4759-c675-e921681e9d37"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +376,7 @@
         },
         "outputId": "989ebf03-99d7-4021-9c55-fe182a6db731"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +421,7 @@
         "id": "91Rp55I-0ekK",
         "outputId": "4ca6d7ac-7287-4bf7-8fe1-5eb97b153b58"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +487,7 @@
         "id": "hQuU2Jxs2ahS",
         "outputId": "75ec669d-0819-470b-9576-610ebe0ebb0c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,7 +539,7 @@
         "id": "gWYT7CKd_ULN",
         "outputId": "0e7f300e-b2c7-4e82-d6a3-4faac606d952"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -591,7 +591,7 @@
         "id": "gU_vO4b82-F3",
         "outputId": "ce69b646-e92a-4a71-f034-033111cd7c08"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -632,7 +632,7 @@
         "id": "RdwDLntB-a8b",
         "outputId": "bb3f690f-9dd8-4c26-b9cd-0a6c9c1240c4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,7 +689,7 @@
         "id": "mDyFeZdMC11j",
         "outputId": "8b951eb6-8ddf-4f0f-ec3a-ab540f2e0f0c"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,7 +729,7 @@
         "id": "s1wBoMdN7yyX",
         "outputId": "1be372fb-4a4d-4078-c4f2-5345bbc1fe54"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,7 +758,7 @@
         "id": "SxhvpIRxCTU3",
         "outputId": "8de1d1aa-a7de-47f2-f8e4-729bcd8759b6"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,6 +804,29 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Hey! My name is Oshank Agrawal.**\n",
+        "\n",
+        "In this module we solve some questions on **numpy library** which gives clarity about some functions like:\n",
+        "\n",
+        "* array()\n",
+        "\n",
+        "* type()\n",
+        "\n",
+        "**Attribute**\n",
+        "\n",
+        "* ndim\n",
+        "\n",
+        "* shape\n",
+        "\n",
+        "* size"
+      ],
+      "metadata": {
+        "id": "VffE46x9teng"
+      }
     }
   ]
 }
