Data Representation by BOX plot

--- a/Box_Plot.ipynb
+++ b/Box_Plot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9oMy979A2uca5soTu8NlR",
+      "authorship_tag": "ABX9TyMc29iw9/dIHVu2UmMl0iBY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -404,12 +404,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 557
+          "height": 1000
         },
         "id": "NexbUbNdZ6OK",
-        "outputId": "773a2d25-03e7-4bf6-b7bb-04c9e955c3f4"
+        "outputId": "daee4e3a-85db-4a55-88d0-30191af17977"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -422,6 +422,21 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Hey! My name is Oshank Agrawal.**\n",
+        "\n",
+        "In this module we learnt about **Box plot** and its different attributes like:\n",
+        "\n",
+        "* vert\n",
+        "\n",
+        "* notch etc"
+      ],
+      "metadata": {
+        "id": "YH9DadHk1GFh"
+      }
     }
   ]
 }
